feat: 환경별 DB 설정 추가 및 recruit API 개선
- config.json 삭제, config.js 추가하여 환경별 DB 설정 관리
- NODE_ENV=development 환경에서 docker-compose로 로컬 테스트 가능하도록 설정
- NODE_ENV=test, production 환경에서는 AWS RDS에 연결되도록 수정
- Sequelize 모델(Member)에 grade 항목 추가
- recruit API에서 grade 항목이 추가로 저장되도록 변경
